--- a/ProyectoWeb/inde.html
+++ b/ProyectoWeb/inde.html
@@ -22,7 +22,7 @@
                 <input type="search"  id="buscador" placeholder="Search">
                 <input type="submit" value="Search">
             </section>
-
+<p> ahh</p>
 
         </nav>
     </header>
