--- a/ProyectoWeb/inde.html
+++ b/ProyectoWeb/inde.html
@@ -23,6 +23,7 @@
                 <input type="submit" value="Search">
             </section>
 <p> ahh</p>
+<p> ahh</p>
 
         </nav>
     </header>
